--- a/ThreeJsExport/ThreeJsExport.csproj
+++ b/ThreeJsExport/ThreeJsExport.csproj
@@ -49,7 +49,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\..\ProgramData\SpaceClaim\Addins\ThreeJSON\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\..\ProgramData\SpaceClaim\Addins\ThreeJSON\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
